@@ -8,6 +8,16 @@
 ======
 
 
+
+Bug:
+
+#393 Error: Format should be 5: or :2015-05-20 or 5:2015-05-20 
+#395 Perform a "clean" checkin/checkout like 
+
+Feature:
+
+
+
 2.2.37
 ======
 
